--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -13,16 +15,41 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.mainsite {
-    display: flex;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: rgb(67, 44, 131);
 }
 
 .greeting {
     display: flex;
+    font-size: 45px;
+
 }
 
 .mainlist {
     display: flex;
+    column-gap: 50px;
+    margin-top: 30px;
+    line-height: 150%;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+.link1,
+.link2 {
+    height: 90px;
+    width: 150px;
+    border-radius: 40% 25%;
+    list-style: none;
+    box-shadow: 0 3px 6px #82689c29, 0 3px 6px rgba(144, 183, 152, 0.23);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.link2 {
+    border-radius: 25% 40%;
 }
